[project]
name = "comfyui-toolbox"
description = "Nodes:Preview Json, Save Json, Test Json Preview, ... preview and save nodes"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/zcfrank1st/Comfyui-Toolbox"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "Comfyui-Toolbox"
Icon = ""
